--- a/AuthorizationServer.App/Views/Account/Logout.cshtml
+++ b/AuthorizationServer.App/Views/Account/Logout.cshtml
@@ -8,6 +8,7 @@
 
     <form asp-action="Logout">
         <input type="hidden" name="logoutId" value="@Model.LogoutId"  />
+        <input type="hidden" name="ReturnUri" value="@Model.ReturnUri"  />
         <div class="form-group">
             <button class="btn btn-primary">Yes</button>
         </div>
